--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,28 @@
 name: Testing
-on: push
+
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   test-project:
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
+    
     steps: 
-    - uses: action/checkout@v2
-    - name: Run Django unit Test
-      run : | 
-        pip3 install --user django
-        python3 manage.py test
- 
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.x
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    
+    - name: Run Django unit tests
+      run: |
+        python manage.py test
